--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
     "@tanstack/react-query": "^5.67.2",
+    "axios": "^1.8.3",
+    "cors": "^2.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
